<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="user.rockpaperscissors.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="69dp"

        android:layout_marginBottom="36dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/make_choice"
        android:textAlignment=" center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/rockBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rockBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="137dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/rock"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/paperBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/paperBtn"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/paper"
        app:layout_constraintEnd_toStartOf="@+id/scissorsBtn"
        app:layout_constraintStart_toEndOf="@+id/rockBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/scissorsBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="137dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:text="@string/scissors"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paperBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/comp_chose"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/computerChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/computerChoice"
        android:layout_width="174dp"
        android:layout_height="33dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="10dp"
        android:text="@string/comp_choice"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/resultTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/resultTxt"
        android:layout_width="259dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="150dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="16dp"
        android:text="@string/u_chose"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperBtn" />

    <TextView
        android:id="@+id/txtUserChoice"
        android:layout_width="173dp"
        android:layout_height="35dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="14dp"
        android:text="@string/u_choice"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="16dp"
        android:text="@string/numWins"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/numWins"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="73dp"
        android:layout_height="38dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/numLosses"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/numLosses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numWins"
        android:layout_width="34dp"
        android:layout_height="20dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="7dp"
        android:text="@string/wins"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/rockBtn"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/numLosses"
        android:layout_width="27dp"
        android:layout_height="24dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp"
        android:text="@string/losses"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/scissorsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>
